--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
     background: url('/assets/img/bg-desktop.webp');
-    font-family: Bai jamjuree;
+    font-family: "Bai Jamjuree", sans-serif;
 }
 
 #container {
