--- a/assets/style.css
+++ b/assets/style.css
@@ -6,7 +6,7 @@
 
 body {
     background: url('/assets/img/bg-desktop.webp');
-    font-family: "Bai Jamjuree", sans-serif;
+    font-family: Bai Jamjuree, sans-serif;
 }
 
 #container {
@@ -21,7 +21,7 @@ body {
     margin: 1rem 1rem;
     height: 20rem;
     flex-grow: 1;
-    flex-basis: calc(33% -6rem);
+    flex-basis: calc(33% - 6rem);
 }
 
 .cartao__conteudo {
@@ -61,7 +61,7 @@ body {
     backface-visibility: hidden;
 }
 
-.cartao:hover .cartao__conteudo {
+.cartao.active .cartao__conteudo {
     transform: rotateY(180deg);
 }
 
@@ -97,7 +97,7 @@ footer p {
 
 @media (max-width: 560px) {
     body{
-        background: url('/assets/img/bg-mobile.webp');
+        background: url('/assets/img/bg-mobile.webp'), no-repeat cover;
     }
 
     .cartao{
